--- a/src/server/projects/detail/index.njk
+++ b/src/server/projects/detail/index.njk
@@ -117,7 +117,7 @@
       {% endset %}
 
       {% set engagementHtml %}
-        <h2 class="govuk-heading-m">Project Update Timeline</h2>
+        <h2 class="govuk-heading-m">Project update timeline</h2>
         {{ projectEngagementTimeline(projectHistory, project, isAuthenticated) }}
       {% endset %}
 
