fix: seeding in dev

--- a/src/server/admin/index.njk
+++ b/src/server/admin/index.njk
@@ -103,12 +103,18 @@
       {% if not isTestEnvironment %}
       <div class="govuk-button-group">
         {% if isDevelopment %}
-        <form method="POST" action="/admin/professions/seed-dev" class="govuk-!-display-inline govuk-!-margin-right-2">
+        <form method="POST" action="/admin/projects/seed-dev" class="govuk-!-display-inline govuk-!-margin-right-2">
           <button class="govuk-button" data-module="govuk-button">
-            Add Professions (Dev Only)
+            Add Sample Projects with History (Dev Only)
           </button>
         </form>
         {% endif %}
+        
+        <form method="POST" action="/admin/professions/seed-dev" class="govuk-!-display-inline govuk-!-margin-right-2">
+          <button class="govuk-button" data-module="govuk-button">
+            Add Professions
+          </button>
+        </form>
         
         <div class="govuk-!-display-inline">
           {{ govukButton({
